agent.bat - Filter JAVA_OPTS to have unique values (#65)